# multi-usrp-recorder

./: CMakeLists.txt  README.md  build.sh  llrecorder_1.cpp
src/: buffer_wrapper.hpp  colorize.hpp  config.hpp  interrupt.hpp  logging.hpp  usrp_controller.hpp  utils.hpp
src/sink/: base.hpp  file.hpp  file_ab_mode.hpp  file_rotator.hpp  memcopy.hpp  null.hpp
